--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-# Add the properties to connect to Data Grid (server-list, username and password)
+dekorate.docker.registry=docker.io
+dekorate.docker.image=arsenalsantander/spring-boot-datagrid-challenge:0.0.2
 
-# Add java-serial-allowlist for java marshalling
+dekorate.openshift.expose=true
+dekorate.s2i.builder-image=arsenalsantander/spring-boot-datagrid-challenge:0.0.2
 
-# uncomment this property if you are working locally with docker 4 mac
-#infinispan.remote.client-intelligence=BASIC
+dekorate.openshift.env-vars[0].name=CACHE_USER
+dekorate.openshift.env-vars[0].value=username
+dekorate.openshift.env-vars[0].secret=rhdg-developer-credential
+
+dekorate.openshift.env-vars[1].name=CACHE_PASS
+dekorate.openshift.env-vars[1].value=password
+dekorate.openshift.env-vars[1].secret=rhdg-developer-credential
